# create-ai-tooling-app

./: .gitignore  README.md  pyproject.toml
src/create_ai_tooling_app/: cli.py  scaffold.py
src/create_ai_tooling_app/templates/: .env.example.jinja  .gitignore.jinja  README.md.jinja  pyproject.toml.jinja
src/create_ai_tooling_app/templates/src/: main.py.jinja
src/create_ai_tooling_app/templates/src/llm/: client.py.jinja
src/create_ai_tooling_app/templates/src/models/: request.py.jinja  response.py.jinja
src/create_ai_tooling_app/templates/src/prompts/: base.py.jinja
src/create_ai_tooling_app/templates/src/routes/: tool.py.jinja
src/create_ai_tooling_app/templates/tests/: test_tool.py.jinja
tests/: test_cli.py  test_scaffold.py
