[project]
name = "create-ai-tooling-app"
version = "0.2.0"
description = "CLI to scaffold Python AI tooling API projects"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "questionary>=2.0.1",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
]

[project.scripts]
create-ai-tooling-app = "create_ai_tooling_app.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/create_ai_tooling_app"]
